# trace

./: .AWAITING_TEAM_LEAD_CLARIFICATION.txt  .BLOCKER_FIX_INSTRUCTIONS.md  .CHECKPOINT_3_COORDINATOR_STANDING_BY.md  .COORDINATOR_BLOCKER_UPDATE.txt  .COORDINATOR_FINAL_STATUS.txt  .PHASE_5_CHECKPOINT_3_AUTHORITATIVE_STATUS.md  .PHASE_5_CHECKPOINT_BLOCKER_REPORT.md  .SESSION_5_CHECKPOINT_3_FINAL_STATUS.md  .air.toml  .bandit  .checkpoint-2-monitoring.txt  .checkpoint2_acknowledgments.md  .checkpoint3_status_snapshot.txt  .clocignore  .coverage  .dockerignore  .env.example  .env.neo4j.example  .env.qa  .env.template  .eslintignore  .gitignore  .gitpod.yml  .golangci-backend.yml  .memory-checkpoint-3-update.txt  .monitoring-checklist.txt  .overmind.env  .phase5_checkpoint2_status.md  .phase5_checkpoint3_coordinator_brief.md  .pre-commit-config.yaml  .semgrep.yml  .session-5-phase-5-implementation-status.md  .session-5-status.md  .specification_repositories_manifest.txt  00_START_HERE.md  2025_TOOLS_FRAMEWORKS_GUIDE.md  4SGM_DEPENDABOT_WORKLOG.md  ADR.md  ADVANCED_AI_LLM_PATTERNS_2025.md  AGENTS.md  (+262 more)
.ci-baselines/: README.md  lint-baseline.json
.claude/: BYPASS_INSTRUCTIONS.md  CRITICAL_TIER_STATUS.md  fr-source-contract.json  governance-toolchain.lock.json  phase5_execution_tracker.md  quality-bypass.env  quality.json  sigstore-private.json
.deployments/: .gitkeep  frontend-stable-version.txt
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json  docker-compose.yml  postCreate.sh
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release-drafter.yml
.planning/: go-tooling-plan.md  pheno-sdk-infrastructure-completion-plan.md  pheno-sdk-infrastructure-plan.md  test-project-plan.md
.rollback-logs/: .gitkeep
.serena/: project.yml
.session/: API_CLIENT_COMPLETION_CHECKLIST.md  API_CLIENT_QUICK_REFERENCE.md  API_CLIENT_TECHNICAL_REFERENCE.md  API_CLIENT_UPDATE_SUMMARY.md  DEBUGGING_SESSION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  MCP_PHASE_4_IMPLEMENTATION_SUMMARY.md  PRODUCTION_RELEASE_PREPARATION_SUMMARY.md  RELEASE_PREP_COMPLETION_REPORT.txt  WEBSOCKET_AUTH_IMPLEMENTATION.md  component-usage-matrix-summary.md
.sessions/: 20251130_markdown_parser_implementation.md  improved-sidebar-navigation.md  phase-3c-changes-summary.md  phase-3c-patterns-documented.md  phase-3c-pytest-asyncio-fix-report.md  phase3b_changes.md  phase3b_database_fixes_report.md  phase3b_summary.txt  phase5_completion_summary.md  phase5_files_modified.txt  typescript-7-upgrade-summary.md  typescript-package-fix-20251201-171039.md
.trace/: ADR_COMPONENTS_DELIVERY.md  ADR_COMPONENTS_EXAMPLES.md  ADR_COMPONENTS_SUMMARY.txt  ALL_ISSUES_FIXED_SUMMARY.md  ANALYSIS_COMPLETE.txt  API_ROUTER_ITEM_SPECS.md  AUDIT_COMPLETE_SUMMARY.txt  BACKEND_CONSOLIDATION_IMPLEMENTATION_COMPLETE.md  BARREL_EXPORTS_CREATED.md  BATCH_1_TEST_FIXES.md  BUILD_COMPLETION_INDEX.md  BUILD_STATUS_REPORT.md  BUILD_VERIFICATION_SUMMARY.md  BUNDLE_OPTIMIZATION_SESSION.md  BUNDLE_SIZE_ANALYSIS.md  CHECKLIST.md  CJS_ESM_INTEROP_ANALYSIS.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_SESSION_SUMMARY.md  CONSOLIDATION_AND_OPTIMIZATION_MASTER_PLAN.md  COVERAGE_EXPANSION_SUMMARY.md  DATABASE_INDEXES_QUICK_REFERENCE.md  DELIVERY_SUMMARY.md  DEPENDENCY_CLEANUP_TEXTUAL.md  DOCINDEX_FILES_INDEX.md  DOCINDEX_FINAL_SUMMARY.txt  DOCINDEX_IMPLEMENTATION.md  ENV_UPDATE_COMPLETE.md  EVENT_FLOW_DIAGRAM.md  EVENT_HANDLERS_QUICK_REFERENCE.md  EXECUTION_API_FILES.txt  EXECUTION_API_QUICK_REF.md  EXECUTION_ROUTES_IMPLEMENTATION.md  FEATURE-2787.md  FEATURE-2788.md  FEATURE-2789.md  FEATURE-2790.md  FEATURE-2791.md  FEATURE-2792.md  FEATURE-2793.md  (+189 more)
.tracertm/: .gitignore  project.yaml  test-project-1212998f.db  test-project-31892bb1.db  test-project-3ecd10c9.db  test-project.db  test.db
AGENTS/: INDEX.md
ARCHIVE/: README.md  pyproject.toml
ARCHIVE/EXAMPLES/desktop/src-tauri/: Cargo.toml  tauri.conf.json
ARCHIVE/EXAMPLES/desktop/src-tauri/icons/: README.md
ARCHIVE/EXAMPLES/desktop/src-tauri/src/: commands.rs  commands_extended.rs  db.rs  db_ops.rs  lib.rs  main.rs  menu.rs  models.rs  shortcuts.rs  tray.rs
ARCHIVE/EXAMPLES/desktop/src-tauri/tests/: integration_test.rs
DEMO_PROJECT/: export.json
DOCUMENTATION/: COMPREHENSIVE_RESEARCH_AUDIT.md  DOCUMENTATION_IMPLEMENTATION_COMPLETE.md  DOCUMENTATION_REORGANIZATION_STATUS.md  MVP_GAP_AUDIT.md
EPICS/: EPIC_1_COMPLETE.md  EPIC_2_COMPLETION_REPORT.md  EPIC_5_COMPLETE.md  EPIC_6_COMPLETE.md  EPIC_8_COMPLETE.md
FRs/: FR-TRAC-001.md  FR-TRAC-002.md  FR-TRAC-003.md  FR-TRAC-004.md  FR-TRAC-005.md  FR-TRAC-006.md  FR-TRAC-007.md  FR-TRAC-008.md  FR-TRAC-009.md  FR-TRAC-010.md  FR-TRAC-011.md  FR-TRAC-012.md  FR-TRAC-013.md  FR-TRAC-014.md  FR-TRAC-015.md
GUIDES/: CLOUD_PROVIDERS_GUIDE.md  EVERY_FUNCTIONALITY_WALKTHROUGH.md  README_PHASES_3_4_5.md
PHASES/: PHASE_4_TUI_COMPLETION_SUMMARY.md
PLANNING/: DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_CHECKLIST.md  REVISED_FULL_STACK_PLAN.md
STATUS/: FINAL_ALL_EPICS_COMPLETE.md  MVP_COMPLETION_STATUS.md  PROJECT_COMPLETION_FINAL_SUMMARY.md
TESTING/: COVERAGE_GAP_ANALYSIS_TEMPLATE.md  E2E_TESTS_100_PERCENT_PASS_REPORT.md  E2E_TESTS_EXECUTION_COMPLETE.md  E2E_TEST_EXECUTION_REPORT.md
alembic/: README.md  env.py  schema_reference.sql
backend/: .air.toml  .codecov.yml  .dockerignore  .env.example  .golangci.yml  Dockerfile  Makefile  Taskfile.yml  VERIFY_TESTCONTAINERS_SETUP.sh  atlas.hcl  check_schema.sql  coordination_schema.sql  docker-compose.test.yml  fix_exhaustruct.sh  fix_test_issues.sh  go.mod  go.sum  golangci-baseline.json  golangci-phase1-summary.txt  main.go  postgres_functions.sql  queries.sql  reset_db.sql  schema.hcl  schema.sql  sqlc.yaml  test-commands.sh  test_service_layer_flag.sh  verify-coverage.sh
cairosvg/: __init__.py
config/: Caddyfile  Caddyfile.dev  loc-allowlist.txt  loc-guard.json  naming-guard.json  nats-server.conf  phenotype.toml  process-compose.linux.yaml  process-compose.quality-watch.yaml  process-compose.quality.yaml  process-compose.windows.yaml  process-compose.yaml  quality-dag.yaml  (+3 more)
(+40453 files in other folders)
